--- a/codelab-initial-state/public/index.css
+++ b/codelab-initial-state/public/index.css
@@ -52,12 +52,10 @@ body {
   padding: 16px;
   height: 100%;
   width: 100px;
-  overflow: hidden;
 }
 
 #header .logo img {
-  height: 100%;
-  max-height: 100%;
+  height: 58px;
   margin-left: -4px;
   margin-top: -4px;
 }
