--- a/codelab-initial-state/public/index.css
+++ b/codelab-initial-state/public/index.css
@@ -55,8 +55,7 @@ body {
 }
 
 #header .logo img {
-  height: 100%;
-  max-height: 100%;
+  height: 58px;
   margin-left: -4px;
   margin-top: -4px;
 }
