Fix mobile view

--- a/codelab-initial-state/public/index.css
+++ b/codelab-initial-state/public/index.css
@@ -112,7 +112,7 @@ body {
 #items {
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   grid-template-rows: repeat(auto-fit, 300px);
 
   height: 100%;
