--- a/codelab-final-state/public/index.css
+++ b/codelab-final-state/public/index.css
@@ -112,7 +112,7 @@ body {
 #items {
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   grid-template-rows: repeat(auto-fit, 300px);
 
   height: 100%;
@@ -135,6 +135,7 @@ body {
     "text image"
     "footer image";
 
+  min-width: 350px;
   height: 100%;
   max-height: 100%;
   overflow: hidden;
